# aim

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  pnpm-lock.yaml  pyproject.toml
.agents/scripts/: smart-format.sh
.agents/skills/changelog/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-cratesio.yaml  release-github.yaml  test.yml  test_python.yml  test_web.yml  update-flake-lock.yaml
.plans/: 00001-recurrence-support.md  00002-undo-redo-implementation.md  00004-multi-calendar-support.md  00005-conflict-resolution-strategies.md  00006-kanban-board.md  00007-board-v2-features.md
aim/: __init__.py  __main__.py  config.py
aim/application/: application.py  authorization.py  exceptions.py  session.py
aim/domain/: __init__.py
aim/domain/organization/: __init__.py  (+3 more)
aim/infrastructure/: __init__.py
aim/interface/: __init__.py  _interface.py
aim/util/: __init__.py  config_parser.py  ddd.py  id_generator.py  session_handler.py
aimcal/: Cargo.toml
aimcal/src/: lib.rs  main.rs
app/: __init__.py  __main__.py  api.py  app.py  routes.py
app/util/: __init__.py  config_parser.py
caldav/: AGENTS.md  CLAUDE.md  Cargo.toml  TODO.md
caldav/examples/: README.md  caldav_cli.rs
caldav/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  request.rs  response.rs  sync.rs  todo_helper.rs  todo_overlap.rs  types.rs  xml.rs
caldav/tests/: client.rs  request.rs  response.rs
cli/: AGENTS.md  CLAUDE.md  Cargo.toml  config.dev.toml  config.example.toml
cli/src/: AGENTS.md  arg.rs  cli.rs  cmd_calendar.rs  cmd_dashboard.rs  cmd_event.rs  cmd_generate_completion.rs  cmd_todo.rs  cmd_toplevel.rs  cmd_tui.rs  command.rs  config.rs  event_formatter.rs  lib.rs  main.rs  parser.rs  prompt.rs  short_id.rs  table.rs  todo_editor.rs  todo_formatter.rs  tui.rs  util.rs
cli/src/tui/: app.rs  board.rs  component.rs  component_form.rs  component_form_util.rs  component_page.rs  dispatcher.rs  event_editor.rs  event_store.rs  event_todo_editor.rs  mod.rs  todo_editor.rs  todo_store.rs
core/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
core/src/: AGENTS.md  aim.rs  backend.rs  calendar.rs  config.rs  datetime.rs  db.rs  event.rs  io.rs  lib.rs  localdb.rs  short_id.rs  sqlite_cache.rs  store.rs  todo.rs  types.rs
core/src/backend/: caldav.rs  local.rs
core/src/cache/: event.rs  events.rs  mod.rs  sqlite_cache.rs  todo.rs  todos.rs
core/src/datetime/: anchor.rs  loose.rs  mod.rs  util.rs
core/src/db/: AGENTS.md  calendars.rs  events.rs  migrations_tests.rs  resources.rs  short_ids.rs  tests_utils.rs  todos.rs
core/src/db/migrations/: 20250801095832_add_short_ids.down.sql  20250805075731_drop_autoincrement.down.sql  20250805075731_drop_autoincrement.up.sql  20260131235400_ics_optional.up.sql  20260309102201_add_calendars.down.sql  20260309102201_add_calendars.up.sql
core/src/localdb/: AGENTS.md  CLAUDE.md  db.rs  events.rs  migrations_tests.rs  mod.rs  resources.rs  short_ids.rs  tests_utils.rs  todos.rs
core/src/localdb/migrations/: 20250801070804_init_events_todos.down.sql  20250801070804_init_events_todos.up.sql  20250801095832_add_short_ids.up.sql  20260131235400_ics_optional.down.sql
core/src/store/: caldav.rs  local.rs
core/tests/: aim_test.rs  common_test.rs  event_test.rs  todo_test.rs  workflows_test.rs
core/tests/aim/: events.rs  lifecycle.rs  mod.rs  todos.rs
core/tests/common/: assertions.rs  fixtures.rs  mod.rs  temp_dir.rs
core/tests/event/: mod.rs  status.rs
core/tests/todo/: draft.rs  mod.rs  patch.rs  priority.rs  status.rs
core/tests/workflows/: config_driven.rs  event_lifecycle.rs  file_sync.rs  mod.rs  todo_lifecycle.rs
docs/: architecture.md  styling.md  testing.md
docs/specs/: 00001-recurrence-support.md  00002-undo-redo-implementation.md  00003-add-caldav-support.md  00004-multi-calendar-support.md  00005-conflict-resolution-strategies.md
docs/todos/: 00001-multi-backend-architecture.md  integration-tests-core.md  multi-backend-architecture.md
examples/: README.md  multi-event.ics  recurring-task.ics  simple-meeting.ics  todo-with-priority.ics
ical/: AGENTS.md  CLAUDE.md  Cargo.toml
ical/src/: fmt.rs  formatter.rs  keyword.rs  lexer.rs  lib.rs  ops.rs  parameter.rs  parser.rs  property.rs  property_spec.rs  property_value.rs  semantic.rs  string_storage.rs  syntax.rs  typed.rs  value.rs
ical/src/fmt/: component.rs  parameter.rs  property.rs  value.rs
ical/src/formatter/: component.rs  parameter.rs  property.rs  value.rs
ical/src/ops/: conflict.rs  rrule.rs
ical/src/parameter/: ast.rs  definition.rs  kind.rs  util.rs
ical/src/property/: alarm.rs  ast.rs  cal.rs  calendar.rs  changemgmt.rs  common.rs  datetime.rs  descriptive.rs  kind.rs  miscellaneous.rs  numeric.rs  recurrence.rs  relationship.rs  spec.rs  status.rs  timezone.rs  transp.rs  util.rs
ical/src/semantic/: analysis.rs  custom.rs  enums.rs  extensions.rs  icalendar.rs  properties.rs  property.rs  property_attendee.rs  property_common.rs  property_datetime.rs  property_period.rs  property_util.rs  tz_validator.rs  valarm.rs  vevent.rs  vfreebusy.rs  vjournal.rs  vtimezone.rs  vtodo.rs
ical/src/syntax/: lexer.rs  scanner.rs  tree_builder.rs
ical/src/typed/: analysis.rs  parameter.rs  parameter_type.rs  parameter_types.rs  property_spec.rs  rrule.rs  util.rs  value.rs  value_datetime.rs  value_duration.rs  value_mics.rs  value_numeric.rs  value_period.rs  value_text.rs
ical/src/value/: ast.rs  datetime.rs  duration.rs  mics.rs  miscellaneous.rs  numeric.rs  period.rs  rrule.rs  text.rs  types.rs
ical/tests/: fmt.rs  formatter.rs  lexer.rs  round_trip.rs  semantic.rs  syntax.rs  to_owned_basic.rs  typed.rs
scripts/: add-worktree.sh  init-dev.sh
src/: database.rs  main.rs
tests/util/: test_config_parser.py  test_id_generator.py  test_session_handler.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
(+39 files in other folders)
