[package]
name = "aim"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
icalendar = "0.16"
log = "0.4.27"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
