[project]
name = "aim"
version = "0.0.1"
description = "New project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yzx9", email = "pypi@yzx9.xyz" }]
keywords = []
license = { text = "Apache-2.0" }
dependencies = [
    "aiohttp[speedups]>=3.11.11",
    "alembic>=1.14.1",
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
]

[project.urls]
repository = "https://github.com/yzx9/aim"

[dependency-groups]
dev = [
    "aiohttp-debugtoolbar>=0.6.1",
    "pytest>=8.3.4",
]
