[package]
authors = ["Zexin Yuan <aim@yzx9.xyz>"]
name = "aimcal"
version = "0.2.2"
license = "Apache-2.0"
edition = "2024"

description = "AIM - Analyze. Interact. Manage Your Time, with calendar support"
keywords = ["calendar", "time-management", "productivity"]
categories = ["command-line-interface", "date-and-time"]

documentation = "https://docs.rs/aimcal/"
homepage = "https://github.com/yzx9/aim"
repository = "https://github.com/yzx9/aim"
readme = "../README.md"

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
aimcal-cli = { path = "../cli", version = "0.2.1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
