[package]
authors = ["Zexin Yuan <aim@yzx9.xyz>"]
name = "aimcal"
version = "0.3.0"
license = "Apache-2.0"
edition = "2024"

description = "AIM - Analyze. Interact. Manage Your Time, with calendar support"
keywords = ["calendar", "time-management", "productivity"]
categories = ["command-line-interface", "date-and-time"]

documentation = "https://docs.rs/aimcal/"
homepage = "https://github.com/yzx9/aim"
repository = "https://github.com/yzx9/aim"
readme = "../README.md"

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
aimcal-cli = { path = "../cli", version = "0.3.0", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["sqlite"]

sqlite = ["aimcal-cli/sqlite"]
sqlite-unbundled = ["aimcal-cli/sqlite-unbundled"]
