[package]
name = "aimcal"
version.workspace = true
authors.workspace = true
edition.workspace = true

description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
aimcal-cli.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["sqlite"]

sqlite = ["aimcal-cli/sqlite"]
sqlite-unbundled = ["aimcal-cli/sqlite-unbundled"]
