[package]
name = "aimcal-caldav"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords = ["calendar", "caldav", "webdav", "sync"]
categories = ["network-programming", "date-and-time"]

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = false

[dependencies]
aimcal-ical.workspace = true
thiserror = "2.0.18"
reqwest = { version = "0.12", features = ["rustls-tls"] }
quick-xml = "0.39"
tokio = { version = "1", features = ["fs"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
jiff = "0.2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
serde_json = "1.0"
dotenvy = "0.15"
