[package]
name = "aimcal-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
aimcal-core.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "color", "derive"] }
clap-num = "1.2.0"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
cliclack = "0.3.7"
colored = "3.0.0"
dirs = "6.0.0"
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
uuid = "1.18.1"

[target.'cfg(unix)'.dependencies]
xdg = "3.0.0"

[features]
default = ["sqlite"]

sqlite = ["aimcal-core/sqlite"]
sqlite-unbundled = ["aimcal-core/sqlite-unbundled"]
