[package]
name = "aimcal-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "aim"
path = "src/main.rs"

[dependencies]
aimcal-core.workspace = true
jiff = { version = "0.2", features = ["serde"] }
clap = { version = "4.6", features = ["cargo", "color", "derive"] }
clap-num = "1.2.0"
clap_complete = "4.6"
clap_complete_nushell = "4.6"
cliclack = "0.5.4"
ctrlc = "3.4"
colored = "3.1.1"
dirs = "6.0.0"
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
uuid = "1.23.1"

[target.'cfg(unix)'.dependencies]
xdg = "3.0.0"

[features]
default = ["sqlite"]

sqlite = ["aimcal-core/sqlite"]
sqlite-unbundled = ["aimcal-core/sqlite-unbundled"]

[dev-dependencies]
tempfile = "3.27"
