[package]
authors = ["Zexin Yuan <aim@yzx9.xyz>"]
name = "aimcal-core"
version = "0.4.0"
license = "Apache-2.0"
edition = "2024"

description = "AIM - Analyze. Interact. Manage Your Time, with calendar support"
keywords = ["calendar", "time-management", "productivity"]
categories = ["command-line-interface", "date-and-time"]

documentation = "https://docs.rs/aimcal/"
homepage = "https://github.com/yzx9/aim"
repository = "https://github.com/yzx9/aim"
readme = "../README.md"

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }
dirs = "6.0.0"
iana-time-zone = "0.1.63"
icalendar = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
xdg = "3.0.0"

[dev-dependencies]
toml = "0.9.4"

[features]
default = ["sqlite"]

sqlite = ["sqlx/sqlite"]
# To use SQLite without the bundled `libsqlite3`, you need to install it on your system.
# Dont forget to disable the `sqlite` feature.
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
