[package]
name = "aimcal-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }
dirs = "6.0.0"
iana-time-zone = "0.1.64"
icalendar = "0.17.3"
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
xdg = "3.0.0"

[dev-dependencies]
toml = "0.9.7"

[features]
default = ["sqlite"]

sqlite = ["sqlx/sqlite"]
# To use SQLite without the bundled `libsqlite3`, you need to install it on your system.
# Dont forget to disable the `sqlite` feature.
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
