[package]
name = "aimcal-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
aimcal-ical.workspace = true
bimap = { version = "0.6.3", features = ["serde"] }
jiff = { version = "0.2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"], optional = true }
dirs = "6.0.0"
iana-time-zone = "0.1.64"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["fs"] }
tracing.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
xdg = "3.0.0"

[dev-dependencies]
tempfile = "3"
toml = "0.9.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["sqlite"]

sqlite = ["sqlx/sqlite"]
# To use SQLite without the bundled `libsqlite3`, you need to install it on your system.
# Dont forget to disable the `sqlite` feature.
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
