[package]
name = "aimcal-ical"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
ariadne = "0.6.0"
chumsky = "0.11.2"
jiff = "0.2.16"
lexical = "7.0.5"
logos = "0.15.1"
