[package]
name = "aimcal-ical"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
chumsky = "0.11.2"
jiff = { version = "0.2.16", optional = true }
lexical = "7.0.5"
logos = "0.15.1"

[dev-dependencies]
ariadne = "0.6.0"

[features]
default = []
jiff = ["dep:jiff"]
