[package]
name = "aimcal-ical"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
chumsky = "0.12.0"
jiff = { version = "0.2.16", optional = true }
lexical = "7.0.5"
logos = "0.16.0"
thiserror = "2.0.17"

[dev-dependencies]
ariadne = "0.6.0"

[features]
default = ["jiff"]
jiff = ["dep:jiff"]
